# llm-based-asr-ja

./: LICENSE  README.md  eval.py  pyproject.toml  train.py
src/llm_based_asr_ja/: config.py  data.py  prepare_tokenizer.py  text_normalize.py
src/llm_based_asr_ja/model/: audio_encoder.py  modeling_slm.py  projector.py
